force-app/main/default/objects/Zco_Safety_Keyword__mdt/Zco_Safety_Keyword__mdt.object-meta.xml
<CustomObject>
<description>Metadata configuration for Zco_Safety_Keyword__mdt.</description>
<label>Zco Safety Keyword</label>
<nameField>
<displayFormat>{000000}</displayFormat>
<label>Zco Safety Keyword Name</label>
<type>AutoNumber</type>
</nameField>
<pluralLabel>Zco Safety Keywords</pluralLabel>
<sharingModel>ReadWrite</sharingModel>
</CustomObject>