force-app/main/default/objects/Zco_Safety_Keyword__mdt/fields/Active__c.field-meta.xml
<CustomField>
<fullName>Active__c</fullName>
<label>Active</label>
<type>Checkbox</type>
<required>true</required>
</CustomField>