force-app/main/default/objects/Zco_Safety_Keyword__mdt/fields/Language__c.field-meta.xml
<CustomField>
<fullName>Language__c</fullName>
<label>Language</label>
<type>Text</type>
<required>true</required>
<length>255</length>
</CustomField>