force-app/main/default/objects/Zco_Safety_Keyword__mdt/fields/Pattern__c.field-meta.xml
<CustomField>
<fullName>Pattern__c</fullName>
<label>Pattern</label>
<type>Text</type>
<required>true</required>
<length>255</length>
</CustomField>