force-app/main/default/objects/Zco_Safety_Keyword__mdt/fields/Severity__c.field-meta.xml
<CustomField>
<fullName>Severity__c</fullName>
<label>Severity</label>
<type>Picklist</type>
<required>true</required>
<valueSet>
<valueSetDefinition>
<value>
<fullName>Escalate</fullName>
</value>
<value>
<fullName>Review</fullName>
</value>
</valueSetDefinition>
</valueSet>
</CustomField>